force-app/main/default/objects/Bought_Device__c/Bought_Device__c.object-meta.xml
<CustomObject>
    <label>Satın Alınan Cihaz</label>
    <pluralLabel>Satın Alınan Cihazlar</pluralLabel>
    <nameField>
        <label>Ürün Adı</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Purchased charging devices</description>
</CustomObject>