force-app/main/default/objects/Bought_Device__c/fields/Bought_Channel__c.field-meta.xml
<CustomField>
    <fullName>Bought_Channel__c</fullName>
    <label>Satın Alma Kanalı</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Arçelik</fullName><default>false</default><label>Arçelik</label></value>
            <value><fullName>Amazon</fullName><default>false</default><label>Amazon</label></value>
            <value><fullName>Hepsiburada</fullName><default>false</default><label>Hepsiburada</label></value>
            <value><fullName>Trendyol</fullName><default>false</default><label>Trendyol</label></value>
            <value><fullName>Diğer</fullName><default>false</default><label>Diğer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>