force-app/main/default/objects/Bought_Device__c/fields/Device_Implement_Date__c.field-meta.xml
<CustomField>
    <fullName>Device_Implement_Date__c</fullName>
    <label>Montaj Tarihi</label>
    <type>Date</type>
</CustomField>