force-app/main/default/objects/Bought_Device__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <label>İlgili Müşteri</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bought_Devices</relationshipName>
    <required>true</required>
</CustomField>