force-app/main/default/objects/Bought_Device__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <label>Seri No</label>
    <type>Text</type>
    <length>100</length>
</CustomField>