force-app/main/default/objects/Bought_Device__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <label>Garanti Bitiş</label>
    <type>Date</type>
</CustomField>