force-app/main/default/objects/Bought_Device__c/fields/Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_Date__c</fullName>
    <label>Garanti Başlangıç</label>
    <type>Date</type>
</CustomField>